tests/passing/type_infer_object_access.tails
func a(x: _) -> unit:
  x.x

func tests() -> unit:
  a({x: pass})
