tests/failing/type_infer_mismatch.tails
func a(x: _) -> unit:
  pass

func tests() -> unit:
  a(123)
  a(3.14)
